--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
     displayName: 'Install Python'
 
   - script: |
-      echo "Running HelloWorld"
+      echo "Running HelloWorld.py"
       python3 HelloWorld.py
     displayName: 'Run HelloWorld'
     workingDirectory: $(Build.SourcesDirectory)
